tests/NormalTests/paczka1/fuzzy1/12053355.err
Error in line 4: A202 A202 83,2
Error in line 1: oNSJ3E5 A185 72,4
Error in line 7: 0IHzhf A185 46,7
Error in line 14: vq7GK A202 69,3
